--- a/lab-gavin/src/component/dashboard-container/_dashboard-container.scss
+++ b/lab-gavin/src/component/dashboard-container/_dashboard-container.scss
@@ -19,10 +19,12 @@ body {
     font-size: 5vw;
   }
 
-  h2 {
+  .about-container h2 {
     text-decoration: underline;
     color: grey;
   }
+
+
 
   pre {
     background: $black;
