--- a/shaun-lab23/src/style/main.scss
+++ b/shaun-lab23/src/style/main.scss
@@ -9,13 +9,19 @@ $font-primary: 'helvetica';
 $border-radius: 3px;
 
 body {
-  background: $secondary;
-  font-family: $font-primary;
+  font-family: 'Roboto';
+  background: -webkit-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* Chrome 10+, Saf5.1+ */
+  background:    -moz-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* FF3.6+ */
+  background:     -ms-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* IE10 */
+  background:      -o-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* Opera 11.10+ */
+  background:         linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* W3C */
   text-align: center;
+  }
 
-  // .application {
-  //   width: 100%;
-  // }
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 
   pre {
     background: $black;
@@ -30,6 +36,75 @@ body {
     }
   }
 }
+h1 {
+  background-color: #2980b9;
+  color: white;
+  margin: 0;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+h2 {
+  background-color: white;
+  height: 40px;
+  line-height: 40px;
+  color: #666;
+  list-style: none;
+}
+
+
+li {
+  background-color: white;
+  height: 40px;
+  line-height: 40px;
+  color: #666;
+  list-style: none;
+
+}
+
+input {
+  font-size: 18px;
+  background-color: #f7f7f7;
+  width: 100%;
+  padding: 13px 13px 13px 20px;
+  box-sizing: border-box;
+  color: #2980b9;
+  border: 3px solid rgba(0,0,0,0)
+}
+
+input:focus {
+  background-color: white;
+  border: 2px solid #2980b9;
+  outline: none;
+}
+
+li:nth-family(2n) {
+  background-color: #f7f7f7;
+}
+.fa-plus{
+  float: right;
+}
+
+span {
+  background-color: #e74c3c;
+  height: 40px;
+  margin-right: 20px;
+  text-align: center;
+  color: white;
+  width: 0px;
+  display: inline-block;
+  transition: 0.2s linear;
+  opacity: 0;
+}
+
+li:hover span {
+  width: 40px;
+  opacity: 1.0;
+}
+
+
 
  .board {
   border-color: red;
